--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <!-- Title  -->
-    <title>Essence - Fashion Ecommerce Template</title>
+    <title>PR - Fashion Ecommerce Template</title>
 
     <!-- Favicon  -->
     <link rel="icon" href="img/core-img/favicon.ico">
@@ -207,7 +207,7 @@
                 <div class="col-12">
                     <div class="hero-content">
                         <h6>June Collection</h6>
-                        <h2>SUMMER Collection</h2>
+                        <h2>WINTER Collection</h2>
                         <a href="#" class="btn essence-btn">FEB collection</a>
                     </div>
                 </div>
